# WordsWords

./: .env.local.example  .gitignore  README.md  package.json  pnpm-lock.yaml  run.sh  tsconfig.json
.github/workflows/: test.yml
actions/: class_actions.ts  class_student_actions.ts  disapprovingRoleRequestAction.ts  quiz_creation.ts  quiz_progress.ts  study_space.ts  word_progress.ts  wordlist_assignment.ts
app/: page.tsx
app/createClass/: page.tsx
app/login/: component.tsx
app/privacy-policy/: page.tsx
app/settings/: adminRoleRequests.tsx  page.tsx  settingsForm.tsx
app/words/: page.tsx  wordsList.ts
backend/: .gitignore  Cargo.toml  README.md
backend/src/: main.rs
components/: Footer.tsx  NavBar.tsx  audioButton.tsx  progressBar.tsx
components/analytics/: skeleton.tsx
components/class/: classActionButtons.tsx  deleteClassButton.tsx  people.tsx  skeleton.tsx  teacherClassPage.tsx
components/classUtils/: createClass.tsx
components/quiz/: quiz.tsx  retake.tsx
components/sidebar/: sideBar.tsx  sideBarStructure.tsx  sideBarSubMenu.tsx
components/study/: chooseListTable.tsx  chooseListsColumns.tsx  singleWordDisplay.tsx  studyInterface.tsx  studySpaceFlashcards.tsx  studySpaceQuiz.tsx  studySpaceWrite.tsx
components/ui/: fonts.ts
frontend/: .env.local.example  .gitignore  auth.ts  drizzle.config.ts  next.config.mjs  package.json  pnpm-lock.yaml  start-database.sh  tailwind.config.ts  tsconfig.json
lib/: roleRequest.ts  teacherSettings.ts  userSettings.ts  utils.ts
prisma/: queries.ts  schema.prisma  seed.ts  seedAll.ts  types.ts
(+165 files in other folders)
