[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.1"
dotenv = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = "1.0.198"
serde_json = "1.0.116"


